Add String Polyfill

--- a/DateSpecRunner.html
+++ b/DateSpecRunner.html
@@ -478,6 +478,7 @@
         var cldr = JSON.parse(document.getElementById('cldr').innerHTML);
         Date.calendar = cldr.main['en-GB'].dates.calendars.gregorian;
     </script>
+    <script type="text/javascript" src="Scripts/string.polyfill.js"></script>
     <script type="text/javascript" src="Scripts/Date.js"></script>
 
     <!-- include spec files here... -->
