--- a/DateSpecRunner_plPL.html
+++ b/DateSpecRunner_plPL.html
@@ -496,6 +496,7 @@
         var cldr = JSON.parse(document.getElementById('cldr').innerHTML);
         Date.calendar = cldr.main['pl-PL'].dates.calendars.gregorian;
     </script>
+    <script type="text/javascript" src="Scripts/string.polyfill.js"></script>
     <script type="text/javascript" src="Scripts/Date.js"></script>
 
     <!-- include spec files here... -->
